<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_clear"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:layoutDirection="inherit">

        <ImageView
            android:id="@+id/info"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="inherit"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yanone"
                    android:letterSpacing=".2"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yanone"
                    android:letterSpacing=".14"
                    android:text="@string/app_slogon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_main"
                android:contentDescription="@string/logo_description"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layoutDirection="inherit"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/phone_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cadre_top"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:layoutDirection="inherit"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/country_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/country_code"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:layoutDirection="ltr"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_height"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/phone_field"
                    android:inputType="phone|textNoSuggestions"
                    android:layoutDirection="inherit"
                    android:paddingLeft="15dp"
                    android:paddingRight="25dp"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_height"
                android:autofillHints=""
                android:background="@drawable/cadre_middle"
                android:ems="10"
                android:hint="@string/password_field"
                android:inputType="textPassword"
                android:layoutDirection="inherit"
                android:padding="15dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toTopOf="@id/oneortwo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/oneortwo"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_height"
                android:layout_marginBottom="16dp"
                android:background="@drawable/cadre_bottom"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                app:layout_constraintBottom_toTopOf="@+id/message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Spinner
                    android:id="@+id/number"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="match_parent"
                    android:entries="@array/one_or_two"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:alpha="0"
                android:layoutDirection="inherit"
                android:textColor="@color/accent"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="@dimen/input_height"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/button"
                android:fontFamily="sans-serif"
                android:layoutDirection="inherit"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/button_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintTop_toTopOf="@+id/buttonLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="viewStart">

        <ProgressBar
            android:id="@+id/connect_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layoutDirection="inherit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>